# file-paths

./: Cargo.toml  README.md
src/: error.rs  lib.rs  readme.tpl.md
src/env/: mod.rs  nix.rs  win.rs
src/ext/: char_ext.rs  mod.rs  path_ext.rs  str_ext.rs
src/inner/: drive.rs  envs.rs  expand_envs.rs  mod.rs  path.rs  public.rs  str_values.rs  string_values.rs  test.rs  test_lin.rs  test_win.rs  traits.rs  win_drive.rs
src/iter/: extensions.rs  inner_segment.rs  mod.rs  segments.rs
src/macros/: all_dirs.rs  all_files.rs  all_paths.rs  mod.rs  serde_impl.rs  try_exist.rs  try_from.rs  with_file.rs
src/os/: drive.rs  lin_os.rs  mod.rs  test_os.rs  win_os.rs
src/os/env/: contract.rs  expand.rs  mod.rs  tests.rs  var.rs
src/path/: abs_dir.rs  abs_dir_path.rs  abs_file.rs  abs_file_path.rs  abs_path.rs  absolute_file_path.rs  absolute_folder_path.rs  absolute_path.rs  any_dir.rs  any_file.rs  any_file_path.rs  any_folder_path.rs  any_path.rs  dir_path.rs  file_path.rs  mod.rs  rel_dir.rs  rel_dir_path.rs  rel_file.rs  rel_file_path.rs  rel_path.rs  relative_file_path.rs  relative_folder_path.rs  relative_path.rs  test.rs
tests/: itest_abs_dir.rs  path.rs
